--- a/style/style.css
+++ b/style/style.css
@@ -666,27 +666,27 @@ body {
     }
 
     .info-section-header {
-      font-size: calc(16px + (34 + 34 * 0.7) * ((100vw - 320px) / 1280));
+      font-size: calc(10px + (34 + 34 * 0.7) * ((100vw - 320px) / 1280));
     }
 
     .info-club-block {
-      font-size: calc(9px + (15 + 15 * 0.7) * ((100vw - 320px) / 1280));
+      font-size: calc(5px + (15 + 15 * 0.7) * ((100vw - 320px) / 1280));
     }
 
     .block-h {
-      font-size: calc(16px + (16 + 16 * 0.7) * ((100vw - 320px) / 1280));
+      font-size: calc(12px + (16 + 16 * 0.7) * ((100vw - 320px) / 1280));
     }
 
     .footer-all-info {
-      font-size: calc(7px + (7 + 7 * 0.7) * ((100vw - 320px) / 1280));
+      font-size: calc(5px + (7 + 7 * 0.7) * ((100vw - 320px) / 1280));
     }
-    
+
     .info-photo-first {
-      block-size: 60%;
+      width:50%;
     }
 
     .info-photo-second {
-      block-size: 60%;
+      width:50%;
     }
 
 }
