--- a/style/style.css
+++ b/style/style.css
@@ -147,7 +147,7 @@ body {
 /*=============== Контент сторінки ====================*/
 
 .showcase-area {
-    height: 90vh;
+    height: calc(var(--vh, 1vh) * 90);
     position: relative;
     background-image: url("../img/Kitty.jpg");
     background-size: cover;
@@ -202,7 +202,7 @@ body {
 
   
 .box {
-  margin: 5vh 0;
+  margin: calc(var(--vh, 1vh) * 5) 0;
   position: relative;
   display: flex;
   justify-content: center;
@@ -246,7 +246,7 @@ body {
   .main-info-first,
   .main-info-second {
     display: flex;
-    height: 90vh;
+    height: calc(var(--vh, 1vh) * 90);
     align-items: center;
     justify-content: space-between;
     padding: 0 5%;
@@ -263,7 +263,7 @@ body {
     display: block;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     width: 70%;
     padding: 10% 0;
   }
@@ -271,7 +271,7 @@ body {
   .info-club-block {
     text-align:justify;
     width: 80%;
-    height: 30vh;
+    height: calc(var(--vh, 1vh) * 30);
     margin: 5% 10%;
     font-size: calc(5px + 15 * (100vw / 1280));
   }
@@ -298,7 +298,7 @@ body {
 /*================ Реалізація слайдера ===================*/
 
 .winner-cats {
-  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   display: grid;
   place-items: center;
 }
@@ -469,7 +469,7 @@ body {
 }
 
 .map-container {
-  height: 90vh;
+  height: calc(var(--vh, 1vh) * 90);
   width: 100%;
   margin: 0 auto;
 }
@@ -485,9 +485,9 @@ body {
   display: flex;
   justify-content: space-between;
   font-family: inherit;
-  margin-top: 3vh;
+  margin-top: calc(var(--vh, 1vh) * 3);
   font-size: calc(5px + 7 * (100vw / 1280));
-  height: 25vh;
+  height: calc(var(--vh, 1vh) * 25);
   width: 100%;
 }
 
@@ -500,7 +500,7 @@ body {
 
 .social-media-footer-header {
   width: 100%;
-  height: 5vh;
+  height: calc(var(--vh, 1vh) * 5);
   font-size: 95%;
 }
 
@@ -517,7 +517,7 @@ body {
 
 
 .certificate-items-list li {
-  margin: 0.8vh auto;
+  margin: calc(var(--vh, 1vh) * 0.8) auto;
 }
 
 .certificate-items-list li a {
@@ -536,14 +536,14 @@ body {
 }
 
 .reg-text {
-  margin: 1vh auto;
+  margin: calc(var(--vh, 1vh) * 1) auto;
   font-size: 100%; 
 }
 
 .footer-rights {
   background-color: rgb(75,0,130, 0.6);
   color: white;
-  height: 3vh;
+  height: calc(var(--vh, 1vh) * 3);
   width: 100%;
   text-align: center;
   font-family: inherit;
@@ -678,7 +678,7 @@ body {
     }
 
     .footer-all-info {
-      font-size: calc(5px + (7 + 7 * 0.7) * ((100vw - 320px) / 1280));
+      font-size: calc(7px + (7 + 7 * 0.7) * ((100vw - 320px) / 1280));
     }
 
     .info-photo-first {
@@ -690,3 +690,4 @@ body {
     }
 
 }
+
