--- a/style/style.css
+++ b/style/style.css
@@ -255,6 +255,7 @@ body {
 
   .info-photo-first {
     display:flex;
+    margin-bottom: auto;
     block-size: 90%;
   }
 
@@ -282,6 +283,7 @@ body {
 
   .info-photo-second {
     display:flex;
+    margin-bottom: auto;
     block-size: 90%;
   }
 
@@ -666,15 +668,15 @@ body {
     }
 
     .info-section-header {
-      font-size: calc(10px + (34 + 34 * 0.7) * ((100vw - 320px) / 1280));
+      font-size: calc(16px + (34 + 34 * 0.7) * ((100vw - 320px) / 1280));
     }
 
     .info-club-block {
-      font-size: calc(5px + (15 + 15 * 0.7) * ((100vw - 320px) / 1280));
+      font-size: calc(9px + (15 + 15 * 0.7) * ((100vw - 320px) / 1280));
     }
 
     .block-h {
-      font-size: calc(12px + (16 + 16 * 0.7) * ((100vw - 320px) / 1280));
+      font-size: calc(16px + (16 + 16 * 0.7) * ((100vw - 320px) / 1280));
     }
 
     .footer-all-info {
@@ -682,11 +684,15 @@ body {
     }
 
     .info-photo-first {
-      block-size: 60%;
+      block-size: auto;
+      height: 70%;
+      width: 50%;
     }
 
     .info-photo-second {
-      block-size: 60%;
+      block-size: auto;
+      height: 70%;
+      width:50%;
     }
 
 }
