--- a/style/forum.css
+++ b/style/forum.css
@@ -1,32 +1,72 @@
-.text-photo-block {
+.box {
+    margin: 100px auto;
+}
+
+.forum-actual-discussion {
+    width: 100%;
+    padding: 0 10px;
     display: flex;
-    padding: 5%;
-    justify-content: space-between;
-    width:100%;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
-.text-photo-block-content {
-    margin-top: auto;
-    font-size: calc(5px + 17 * (100vw / 1280));
-    text-align:center;
+.subforum {
+    margin: 15px auto;
+    padding: 10px 15px;
+    border: 0.5px solid black;
+    border-radius: 25px;
+    width: 90%;
+    font-size: calc(5px + 9 * (100vw / 1280));
 }
 
-.text-photo-block-item {
-    width: 50%;
+.subforum:hover {
+    box-shadow: 0 3px 8px 0 rgb(13, 56, 100, 0.74);
+    transition-duration: 0.3s;
+    transform: translateY(-2px);
 }
 
-.text-photo-block-img {
-    background-image: url("../img/b31.jpg");
-    position: relative;
-    background-size:contain;
-    background-repeat: no-repeat;
-    background-position: center;
+.subforum-icon {
+    padding: 5px;
 }
 
-.forum-actual-question {
-
+.subforum-title {
+    font-size: calc(10px + 9 * (100vw / 1280));
 }
 
-.forum-actual-question-list {
+.subforum-row {
+    display: grid;
+    grid-template-columns: 12% 60% 13% 15%;
+}
 
+.subforum-column {
+    padding: 10px;
+    margin: 4px;
+    border-radius: 5px;
+    border: 0.2px solid black;
+}
+
+.btn-main {
+    width: 25%;
+}
+
+.buttons-container {
+    margin-top: 20px;
+    padding: 0 40px;
+    display: flex;
+} 
+
+.filter-window {
+    font-size: 0.8rem;
+    padding: 0 25%;
+}
+
+input[type=checkbox] {
+    margin-right: 10px;
+}
+
+input[type=text], input[type=number], input[type=date], textarea, select {
+    font-family: inherit;
+    width: 100%;
+    height: 15px;
+    display: block;
 }
